:whale: 线程执行器使用更简短的名称